--- a/PlaneWar/PlaneWar.vcxproj.filters
+++ b/PlaneWar/PlaneWar.vcxproj.filters
@@ -78,6 +78,9 @@
     <Image Include="res\Toolbar256.bmp">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="..\..\..\..\..\Desktop\发给学生的材料\plane\me.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\PlaneWar.rc2">
