--- a/PlaneWar/PlaneWar.vcxproj
+++ b/PlaneWar/PlaneWar.vcxproj
@@ -213,7 +213,11 @@
     <ResourceCompile Include="PlaneWar.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本.png" />
+    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本_副本.bmp" />
     <Image Include="..\..\..\..\..\Desktop\发给学生的材料\plane\me.bmp" />
+    <Image Include="..\..\..\..\hanshukai--planegame\res\bg4.bmp" />
+    <Image Include="..\..\..\..\hanshukai--planegame\res\Hero_Player2.bmp" />
     <Image Include="res\PlaneWar.ico" />
     <Image Include="res\PlaneWarDoc.ico" />
     <Image Include="res\Toolbar.bmp" />
