--- a/PlaneWar/PlaneWar.vcxproj.filters
+++ b/PlaneWar/PlaneWar.vcxproj.filters
@@ -93,6 +93,18 @@
     <Image Include="..\..\..\..\..\Desktop\发给学生的材料\plane\me.bmp">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="..\..\..\..\hanshukai--planegame\res\bg4.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\hanshukai--planegame\res\Hero_Player2.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本_副本.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\PlaneWar.rc2">
