--- a/PlaneWar/PlaneWar.vcxproj
+++ b/PlaneWar/PlaneWar.vcxproj
@@ -185,6 +185,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MyPlane.h" />
@@ -196,6 +198,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MyPlane.cpp" />
@@ -213,10 +217,10 @@
     <ResourceCompile Include="PlaneWar.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本.png" />
-    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本_副本.bmp" />
     <Image Include="..\..\..\..\..\Desktop\发给学生的材料\plane\me.bmp" />
     <Image Include="..\..\..\..\hanshukai--planegame\res\bg4.bmp" />
+    <Image Include="..\..\..\..\hanshukai--planegame\res\bullet1.bmp" />
+    <Image Include="..\..\..\..\hanshukai--planegame\res\enemy1.bmp" />
     <Image Include="..\..\..\..\hanshukai--planegame\res\Hero_Player2.bmp" />
     <Image Include="res\PlaneWar.ico" />
     <Image Include="res\PlaneWarDoc.ico" />
