--- a/PlaneWar/PlaneWar.vcxproj.filters
+++ b/PlaneWar/PlaneWar.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="MyPlane.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PlaneWar.cpp">
@@ -66,6 +72,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MyPlane.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Bullet.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -99,10 +111,10 @@
     <Image Include="..\..\..\..\hanshukai--planegame\res\Hero_Player2.bmp">
       <Filter>资源文件</Filter>
     </Image>
-    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本.png">
+    <Image Include="..\..\..\..\hanshukai--planegame\res\enemy1.bmp">
       <Filter>资源文件</Filter>
     </Image>
-    <Image Include="..\..\..\..\..\Desktop\Hero_Player2_副本_副本.bmp">
+    <Image Include="..\..\..\..\hanshukai--planegame\res\bullet1.bmp">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
