--- a/PlaneWar/PlaneWar.vcxproj.filters
+++ b/PlaneWar/PlaneWar.vcxproj.filters
@@ -117,6 +117,12 @@
     <Image Include="..\..\..\..\hanshukai--planegame\res\bullet1.bmp">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="..\..\..\..\..\Desktop\PlaneGame-master\res\Hero_Player2.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\hanshukai--planegame\res\enemy2.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\PlaneWar.rc2">
