--- a/PlaneWar/PlaneWar.vcxproj
+++ b/PlaneWar/PlaneWar.vcxproj
@@ -185,8 +185,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Explosion.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MyPlane.h" />
@@ -198,8 +200,10 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Explosion.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MyPlane.cpp" />
@@ -217,17 +221,29 @@
     <ResourceCompile Include="PlaneWar.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\..\Desktop\20141208042708250_副本_副本.bmp" />
+    <Image Include="..\..\..\..\..\Desktop\65P58PICQet_副本.bmp" />
+    <Image Include="..\..\..\..\..\Desktop\65P58PICQet_副本_副本.bmp" />
+    <Image Include="..\..\..\..\..\Desktop\PlaneGame-master\res\enemy3.bmp" />
     <Image Include="..\..\..\..\..\Desktop\PlaneGame-master\res\Hero_Player2.bmp" />
     <Image Include="..\..\..\..\..\Desktop\发给学生的材料\plane\me.bmp" />
     <Image Include="..\..\..\..\hanshukai--planegame\res\bg4.bmp" />
     <Image Include="..\..\..\..\hanshukai--planegame\res\bullet1.bmp" />
     <Image Include="..\..\..\..\hanshukai--planegame\res\enemy1.bmp" />
     <Image Include="..\..\..\..\hanshukai--planegame\res\enemy2.bmp" />
+    <Image Include="..\..\..\..\hanshukai--planegame\res\e_Little.BMP" />
     <Image Include="..\..\..\..\hanshukai--planegame\res\Hero_Player2.bmp" />
+    <Image Include="..\..\..\..\hanshukai--planegame\res\敌机子弹03.bmp" />
+    <Image Include="res\bg2.bmp" />
+    <Image Include="res\bullet1.bmp" />
+    <Image Include="res\enemy3.bmp" />
+    <Image Include="res\e_Little.BMP" />
+    <Image Include="res\Hero_Player2.bmp" />
     <Image Include="res\PlaneWar.ico" />
     <Image Include="res\PlaneWarDoc.ico" />
     <Image Include="res\Toolbar.bmp" />
     <Image Include="res\Toolbar256.bmp" />
+    <Image Include="res\敌机子弹03.bmp" />
     <Image Include="UserImages.bmp" />
   </ItemGroup>
   <ItemGroup>
