--- a/PlaneWar/PlaneWar.vcxproj.filters
+++ b/PlaneWar/PlaneWar.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="Bullet.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Ball.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Explosion.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PlaneWar.cpp">
@@ -78,6 +84,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Bullet.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Ball.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Explosion.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -121,6 +133,42 @@
       <Filter>资源文件</Filter>
     </Image>
     <Image Include="..\..\..\..\hanshukai--planegame\res\enemy2.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\hanshukai--planegame\res\敌机子弹03.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\hanshukai--planegame\res\e_Little.BMP">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\Desktop\20141208042708250_副本_副本.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\Desktop\65P58PICQet_副本.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\Desktop\65P58PICQet_副本_副本.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\Desktop\PlaneGame-master\res\enemy3.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\Hero_Player2.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\e_Little.BMP">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\enemy3.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\敌机子弹03.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\bullet1.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\bg2.bmp">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
