--- a/PlaneWar/PlaneWar.vcxproj.filters
+++ b/PlaneWar/PlaneWar.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="Expl_big.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Boss2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PlaneWar.cpp">
@@ -132,6 +135,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Expl_big.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Boss2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -259,6 +265,9 @@
       <Filter>资源文件</Filter>
     </Image>
     <Image Include="res\e_Mid.BMP">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\BOSS2.bmp">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
