--- a/PlaneWar/PlaneWar.vcxproj.filters
+++ b/PlaneWar/PlaneWar.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="Boss2.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Boss3.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PlaneWar.cpp">
@@ -138,6 +141,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Boss2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Boss3.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -268,6 +274,12 @@
       <Filter>资源文件</Filter>
     </Image>
     <Image Include="res\BOSS2.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\合体BOSSX.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\bg0.bmp">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
